--- a/index.html
+++ b/index.html
@@ -1,73 +1,64 @@
 <!DOCTYPE html>
 <html>
-
 <head>
 	<link href="css/style.css" type="text/css" rel="stylesheet">
 	<title>Home</title>
+	<link rel="shortcut icon" type="image/png" href="images/favicon.png"/>
 </head>
 
 <body>
-	<div class='container'>	
-		<div class='tabbladen'>
-			<div class='navmenu'>
-				<div class='dropdown'>					
-					<ul>
-						<li class='pagina'> HOME </li>
-						<li> ONS BEDRIJF </li>
-						<li> NIEUWS </li>
-						<li> CONTACT </li>
-					</ul>
-				</div>
+	<div class='container'>
+		<div class='header'>
+			<div class='logo'>		
+			</div>
+			<div class='menu'>
+			</div>		
+			<div class='dropdown'>
+			<ul>
+				<li class='pagina'>HOME</li>
+				<li>ONS BEDRIJF</li>
+				<li>NIEUWS</li>
+				<li>CONTACT</li>
+			</ul>
 			</div>
 			<div class='balk'>
 			</div>
-			<div class='logo'>
-			</div>
 		</div>
+		
 		<div class='tekst'>
-			<center>
-				<h1> Welkom bij energiebureau Enairko </h1>
-				<br>
-				<br>
-				<p> 
-					Met onze ervaring en expertise staan wij altijd klaar om u zo goed mogelijk te helpen.
-					Door onze permanente bijscholingen zijn wij steeds op de hoogte van de nieuwste zaken.
-					Bij elk project vertrekken we vanuit de wensen en eisen van de klant.
-				</p>
-				<br>
-				<p>
-					Tijdens en na afloop van het project staan we u bij met vakkundig advies.
-					Wij zijn steeds bereikbaar, ook op feestdagen, om u zo snel mogelijk verder te helpen.
-				</p>
-			</center>
 			<br>
-			<ul>
-				<li id='lijst'>EPC</li>
-				<li id='lijst'>AIRCOKEURING</li>
-				<li id='lijst'>PLAATSBESCHRIJVING</li>
-			</ul>
+			<center>
+			<h1>Welkom bij energiebureau Enairko</h1>
+			<br>
+			<p>
+			Met onze ervaring en expertise staan wij altijd klaar om u zo goed mogelijk te helpen.
+			Door onze permanente bijscholingen zijn wij steeds op de hoogte van de nieuwste zaken.
+			Bij elk project vertrekken we vanuit de wensen en eisen van de klant.
+			</p>
+			<br>
+			<p>			
+			Tijdens en na afloop van het project staan we u bij met vakkundig advies.
+			Wij zijn steeds bereikbaar, ook op feestdagen, om u zo snel mogelijk verder te helpen.
+			</p>
+			</center>
 		</div>
+		
 		<footer>
 			<div class='fb'>
 			</div>
-			
-			<a href="mailto:robbe.dhulster@student.vives.be">
 			<div class='mail'>
 			</div>
-			</a>
-			
 			<div class='west'>
 				<h2> Regio West-Vlaanderen </h2>
-				<p id='voet'> Robbe Dhulster </p>			
-				<p id='voet'> +32 470 67 75 17 </p>
+				<p class='voet'> Robbe Dhulster </p>				
+				<p class='voet'> +32 470 67 75 17 </p>
 			</div>
 			<div class='oost'>
 				<h2> Regio Oost-Vlaanderen </h2>
-				<p id='voet'> Elias Maes </p>			
-				<p id='voet'> +32 476 92 90 90 </p>
+				<p class='voet'> Elias Maes </p>				
+				<p class='voet'> +32 476 92 90 90 </p>
 			</div>
 		</footer>
 	</div>
+		
 </body>
-
-</html>
