--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<link href="css/style.css" type="text/css" rel="stylesheet">
 	<title>Home</title>
 	<link rel="shortcut icon" type="image/png" href="images/favicon.png"/>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
 <body>
@@ -41,8 +42,13 @@
 			Wij zijn steeds bereikbaar, ook op feestdagen, om u zo snel mogelijk verder te helpen.
 			</p>
 			</center>
+			<ul>
+				<li class='lijst'>EPC</li>
+				<li class='lijst'>AIRCO-KEURINGEN</li>
+				<li class='lijst'>PLAATSBESCHRIJVING</li>
+			</ul>
 		</div>
-		
+	
 		<footer>
 			<div class='fb'>
 			</div>
@@ -52,11 +58,13 @@
 				<h2> Regio West-Vlaanderen </h2>
 				<p class='voet'> Robbe Dhulster </p>				
 				<p class='voet'> +32 470 67 75 17 </p>
+				<p class='voet'> enairko@outlook.be </p>
 			</div>
 			<div class='oost'>
 				<h2> Regio Oost-Vlaanderen </h2>
 				<p class='voet'> Elias Maes </p>				
 				<p class='voet'> +32 476 92 90 90 </p>
+				<p class='voet'> enairko@outlook.be </p>
 			</div>
 		</footer>
 	</div>
