--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<link href="css/style.css" type="text/css" rel="stylesheet">
 	<title>Home</title>
 	<link rel="shortcut icon" type="image/png" href="images/favicon.png"/>
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+
 </head>
 
 <body>
@@ -41,7 +41,8 @@
 			Tijdens en na afloop van het project staan we u bij met vakkundig advies.
 			Wij zijn steeds bereikbaar, ook op feestdagen, om u zo snel mogelijk verder te helpen.
 			</p>
-			</center>
+			<p> onze diensten: </p>
+			</center>			
 			<ul>
 				<li class='lijst'>EPC</li>
 				<li class='lijst'>AIRCO-KEURINGEN</li>
