--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<link href="css/style.css" type="text/css" rel="stylesheet">
 	<title>Home</title>
 	<link rel="shortcut icon" type="image/png" href="images/favicon.png"/>
-	<meta name="viewport" content="width=device-width'>
+	<meta name="viewport" content="width=device-width">
 </head>
 
 <body>
