--- a/index.html
+++ b/index.html
@@ -13,16 +13,46 @@
 			<div class='logo'>		
 			</div>
 			<div class='menu'>
-			</div>		
+			</div>
+			<div class='headtekst'>
+				<table>
+				<th class='pagina'>HOME</th>
+				<th>ONS BEDRIJF</th>
+				<th>NIEUWS</th>
+				<th>CONTACT</th>
+				</table>
+			</div>
 			<div class='dropdown'>
 			<ul>
 				<li class='pagina'>HOME</li>
 				<li>ONS BEDRIJF</li>
 				<li>NIEUWS</li>
 				<li>CONTACT</li>
+				<li>***</li>
+				<li>EPC</li>
+				<li>AIRCO-KEURINGEN</li>
+				<li>PLAATSBESCHRIJVING</li>
 			</ul>
 			</div>
 			<div class='balk'>
+			</div>
+		</div>
+		
+		<div class='banners'>
+			<div class='epc'>
+			<center>
+			<p class='inbanners'>EPC</p>
+			</center>
+			</div>
+			<div class='airco'>
+			<center>
+			<p class='inbanners'>AIRCO-KEURINGEN</p>
+			</center>
+			</div>
+			<div class='plaatsbeschrijving'>
+			<center>
+			<p class='inbanners'>PLAATS-BESCHRIJVING</p>
+			</center>
 			</div>
 		</div>
 		
@@ -41,8 +71,8 @@
 			Tijdens en na afloop van het project staan we u bij met vakkundig advies.
 			Wij zijn steeds bereikbaar, ook op feestdagen, om u zo snel mogelijk verder te helpen.
 			</p>
-			<p> onze diensten: </p>
-			</center>			
+			<p> Onze diensten: </p>
+			</center>				
 			<ul>
 				<li class='lijst'>EPC</li>
 				<li class='lijst'>AIRCO-KEURINGEN</li>
